--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,40 @@
 :root {
-  /* ### Light Theme */
+  --bg-color: hsl(0, 0%, 98%);
+  --body-bg-color: hsl(236, 33%, 92%);
+  --general-text: hsl(235, 19%, 35%);
+  --main-heading: hsl(0, 0%, 98%);
+  --checkmark-bg: hsl(233, 11%, 84%);
+  --checkmark-gradient-bg: linear-gradient(
+    to bottom right,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
+  --checkmark-inner-bg: hsl(236, 33%, 92%);
+  --border-color: hsl(236, 33%, 92%);
+  --btn-color: hsl(236, 9%, 61%);
+  --hover-color: hsl(235, 19%, 35%);
+  --btn-active: hsl(220, 98%, 61%);
+  --bg-desktop: url("./images/bg-desktop-light.jpg");
+  --bg-mobile: url("./images/bg-mobile-light.jpg");
+}
 
-  --very-Light-Gray: hsl(0, 0%, 98%);
-  --Very-Light-Grayish-Blue: hsl(236, 33%, 92%);
-  --Light-Grayish-Blue: hsl(233, 11%, 84%);
-  --Dark-Grayish-Blue: hsl(236, 9%, 61%);
-  --Very-Dark-Grayish-Blue: hsl(235, 19%, 35%);
-
-  /* ### Dark Theme */
-
-  --Very-Dark-Blue: hsl(235, 21%, 11%);
-  --Very-Dark-Desaturated-Blue: hsl(235, 24%, 19%);
-  --Light-Grayish-Blue: hsl(234, 39%, 85%);
-  --Light-Grayish-Blue-hover: hsl(236, 33%, 92%);
-  --Dark-Grayish-Blue: hsl(234, 11%, 52%);
-  --Very-Dark-Grayish-Blue: hsl(233, 14%, 35%);
-  --Very-Dark-Grayish-Blue: hsl(237, 14%, 26%);
+.darkmode {
+  --body-bg-color: hsl(235, 21%, 11%);
+  --bg-color: hsl(235, 24%, 19%);
+  --general-text: hsl(234, 39%, 85%);
+  --main-heading: hsl(0, 0%, 98%);
+  --checkmark-bg: hsl(237, 14%, 26%);
+  --checkmark-gradient-bg: linear-gradient(
+    to bottom right,
+    hsl(192, 100%, 67%),
+    hsl(280, 87%, 65%)
+  );
+  --checkmark-inner-bg: hsl(237, 14%, 26%);
+  --border-color: hsl(237, 14%, 26%);
+  --btn-color: hsl(234, 11%, 52%);
+  --hover-color: hsl(236, 33%, 92%);
+  --bg-desktop: url("./images/bg-desktop-dark.jpg");
+  --bg-mobile: url("./images/bg-mobile-dark.jpg");
 }
 
 *,
@@ -42,11 +61,16 @@ button {
   margin: 0;
   text-decoration: none;
   background: transparent;
-  font-size: 1rem;
+  font: inherit;
+  font-size: 0.85rem;
+  font-weight: 500;
   line-height: 1;
   cursor: pointer;
-  font: inherit;
-  color: inherit;
+  color: var(--btn-color);
+}
+
+button:hover {
+  color: var(--hover-color);
 }
 
 img {
@@ -56,7 +80,8 @@ img {
 input {
   font: inherit;
   font-size: 0.9rem;
-  padding: 0.8em 0;
+  color: inherit;
+  /* padding: 0.7em 0; */
   border: none;
 }
 
@@ -67,7 +92,7 @@ input {
 }
 
 .dark-bg {
-  background-color: var(--Very-Dark-Desaturated-Blue);
+  background-color: var(--bg-color);
 }
 
 .push {
@@ -82,121 +107,156 @@ input {
 
 body {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background: var(--Very-Dark-Blue) url("./images/bg-mobile-dark.jpg") no-repeat
-    top left / 100% 25vh;
-  color: var(--Light-Grayish-Blue);
+  background: var(--body-bg-color) var(--bg-mobile) no-repeat top left / 100%
+    30vh;
+  color: var(--general-text);
 }
 
-/* header {
-  background: url("images/bg-mobile-dark.jpg") no-repeat;
-  height: 20vh;
-} */
-
-.heading {
-  padding: 2rem 0;
+/* Header */
+header {
+  padding: 3rem 0 2rem;
 }
 
-.heading h1 {
+header .heading {
+  color: var(--main-heading);
+  font-size: 1.6rem;
   text-transform: uppercase;
-  letter-spacing: 6px;
-  color: var(--very-Light-Gray);
+  letter-spacing: 0.4em;
 }
 
-.form-control,
-.todo-container {
-  width: 100%;
-  margin-bottom: 1rem;
+header .sun-icon,
+header .moon-icon {
+  width: 1.4rem;
+  height: 1.4rem;
 }
 
-.form-control {
-  padding: 0 1.2em;
+.delete-icon {
+  width: 1rem;
+  height: 0.8rem;
 }
 
-.form-control.row {
+/* Form */
+form .form-control {
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 1rem 1rem;
+}
+
+form .form-control.row {
   justify-content: flex-start;
-}
-
-.todolist,
-.filter {
-  padding: 0.8em 1.2em;
-}
-
-.list-item {
-  padding: 0 0 1rem 0;
-  border-bottom: 1px solid var(--Light-Grayish-Blue);
-  margin-bottom: 1rem;
-
-  display: flex;
-  align-items: center;
-}
-
-.drag-drop {
-  text-align: center;
-  margin-top: 3rem;
 }
 
 .checkmark {
   border-radius: 50%;
-  /* border: 1px solid var(--Light-Grayish-Blue);
-  width: 24px;
-  height: 24px; */
+  width: 1.3rem;
+  height: 1.3rem;
+  background: var(--checkmark-bg);
+  /* padding: 0.05rem; */
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-right: 0.7rem;
+  align-items: center;
+  margin-right: 1rem;
+  transition: background 0.4s ease-in-out;
+}
 
-  cursor: pointer;
-  background: hsl(234, 39%, 85%);
-  width: 24px;
-  height: 24px;
-  /* padding: 0.1rem; */
-  border-radius: 50%;
+.list-container .checkmark:hover {
+  background: var(--checkmark-gradient-bg);
 }
 
 .checkmark.completed {
-  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
-}
-
-.checkmark:hover {
-  background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+  background: var(--checkmark-gradient-bg);
 }
 
 .checkmark-inner {
-  background: hsl(235, 19%, 35%);
-  width: 20px;
-  height: 20px;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  background-color: var(--bg-color);
   border-radius: 50%;
 }
 
-.checkmark-inner.completed {
-  display: none;
-}
-
-li.completed {
-  text-decoration: line-through;
-}
-.filter {
-  margin-top: 1rem;
+input[type="text"] {
+  flex: 3;
+  outline: none;
 }
 
 input[type="checkbox"] {
   display: none;
 }
 
-input[type="text"] {
-  width: 100%;
-  color: hsl(234, 39%, 85%);
-  outline: none;
+/* List container */
+.list-container {
+  border-radius: 5px;
+  overflow: hidden;
+  margin: 1.5rem 0;
+  text-align: center;
 }
 
-@media (min-width: 450px) {
+.display-msg {
+  padding: 1rem 0 0;
+}
+
+.list-footer {
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.acitve-todos-count {
+  color: var(--btn-color);
+}
+
+.list-item {
+  padding: 1rem;
+  border-bottom: 1px solid var(--border-color);
+  background-color: var(--bg-color);
+  text-align: left;
+}
+
+.todo-text.completed {
+  text-decoration: line-through;
+  color: var(--btn-color);
+}
+
+.filter {
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+}
+.filter.row {
+  justify-content: center;
+}
+
+.filter button {
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+}
+
+.active-btn {
+  color: var(--btn-active);
+}
+
+.drag-drop {
+  color: var(--btn-color);
+  text-align: center;
+  margin: 2rem 0;
+}
+
+/* Media Queries */
+
+@media (min-width: 750px) {
   body {
-    background: var(--Very-Dark-Blue) url("./images/bg-desktop-dark.jpg")
-      no-repeat top left/auto 25vh;
+    background: var(--body-bg-color) var(--bg-desktop) no-repeat top left/100vw
+      30vh;
+  }
+
+  header {
+    padding: 5rem 0 3rem;
+  }
+
+  header .heading {
+    font-size: 2rem;
   }
 }
