Change shadow's color and layers

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,10 @@
     hsl(280, 87%, 65%)
   );
 
-  --box-shadow: hsl(235, 19%, 35%, 0.5) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  --shadow-color: hsl(236, 9%, 61%, 0.07);
+  --box-shadow: var(--shadow-color) 0px 4px 8px,
+    var(--shadow-color) 0px 6px 12px, var(--shadow-color) 0px 8px 16px,
+    var(--shadow-color) 0px 12px 24px;
 
   /* Typography */
   --font-size: 1.125rem;
@@ -35,8 +37,10 @@
   --on-surface-vivid: hsl(234, 39%, 85%);
   --on-surface-dim: hsl(233, 14%, 35%);
 
-  --box-shadow: rgba(10, 10, 10, 0.2) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  --shadow-color: hsl(235, 10%, 5%, 0.1);
+  --box-shadow: var(--shadow-color) 0px 4px 8px,
+    var(--shadow-color) 0px 6px 12px, var(--shadow-color) 0px 8px 16px,
+    var(--shadow-color) 0px 12px 24px;
 
   /* BG images */
   --bg-desktop: url("./images/bg-desktop-dark.jpg");
