--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --on-background: hsl(236, 9%, 61%);
   --on-surface-vivid: hsl(235, 19%, 35%);
   --on-surface-dim: hsl(236, 9%, 61%);
+  --light-color: hsl(233, 11%, 84%);
 
   --gradient: linear-gradient(
     to bottom right,
@@ -33,9 +34,10 @@
   /* Colors */
   --background: hsl(235, 21%, 11%);
   --surface: hsl(235, 24%, 19%);
-  --on-background: hsl(234, 11%, 52%);
+  --on-background: hsl(233, 14%, 35%);
   --on-surface-vivid: hsl(234, 39%, 85%);
-  --on-surface-dim: hsl(233, 14%, 35%);
+  --on-surface-dim: hsl(234, 11%, 52%);
+  --light-color: hsl(237, 14%, 26%);
 
   --shadow-color: hsl(235, 10%, 5%, 0.1);
   --box-shadow: var(--shadow-color) 0px 4px 8px,
@@ -219,7 +221,7 @@ form input[type="text"] {
 }
 
 form input[type="text"]::placeholder {
-  color: var(--on-background);
+  color: var(--on-surface-dim);
 }
 
 form input[type="text"]:focus {
@@ -240,7 +242,7 @@ form input[type="text"]:focus {
   padding: 1rem;
   grid-template-columns: 1fr 10fr 1fr;
   align-items: center;
-  border-bottom: 1px solid var(--on-surface-dim);
+  border-bottom: 1px solid var(--light-color);
 }
 
 .todo-content {
@@ -272,7 +274,7 @@ form input[type="text"]:focus {
   border-radius: 50%;
   width: 1.3rem;
   height: 1.3rem;
-  background: var(--on-surface-dim);
+  background: var(--light-color);
   display: flex;
   justify-content: center;
   align-items: center;
